@@ -14,6 +14,10 @@ This extension is meant to address 'rare events' handling through class object '
 
 == Features ==
 
+== Usage ==
+To create a stub, use:
+<code>StubManager::createStub( 'class name', 'full path filename', array of hooks );</code>
+in <code>LocalSettings.php</code> after the require line <code>require( ...'StubManager.php' );</code>
 
 == Dependancy ==
 
@@ -24,22 +28,73 @@ To install independantly from BizzWiki:
 require('extensions/StubManager/StubManager.php');
 </source>
 
+== Notes ==
+The extension that are not candidate for this stubbing facility including those handling 'magic words' of the parser.
+
 == History ==
 
 == Code ==
 </wikitext>*/
+$wgExtensionCredits[StubManager::thisType][] = array( 
+	'name'    => StubManager::thisName,
+	'version' => StubManager::getRevisionId('$Id$'),
+	'author'  => 'Jean-Lou Dupont',
+	'description' => 'Provides stubbing facility for extensions handling rare events. Extensions registered: ', 
+);
 
 class StubManager
 {
 	static $stubList;
-
+	const thisType = 'other';
+	const thisName = 'StubManager';
+	
 	public static function createStub( $class, $filename, $hooks )
 	{
+		static $updateCreditsHooked = false;
+		if (!$updateCreditsHooked)
+		{
+			$updateCreditsHooked = true;
+			self::setupCreditsHook();	
+		}
+		
 		global $wgAutoloadClasses;
 		$wgAutoloadClasses[$class] = $filename;
 		
 		self::$stubList[ $class ] = new Stub( $class, $hooks );
 	}
+	private static function setupCreditsHook()
+	{
+		global $wgHooks;
+		$wgHooks['SpecialVersionExtensionTypes'][] = 'StubManager::hUpdateExtensionCredits';
+	}
+	public function hUpdateExtensionCredits( &$sp, &$ext )
+	{
+		global $wgExtensionCredits;
+		
+		if (!empty( self::$stubList ))
+			foreach( self::$stubList as $classe => $obj )
+				$result .= $classe.' ';
+				
+		$result=trim($result);
+		
+		foreach ( $wgExtensionCredits[self::thisType] as $index => &$el )
+			if ($el['name']==self::thisName)
+				$el['description'] .= $result.'.';
+		
+	}
+	static function getRevisionData( &$id, &$date, $d = null )
+	{
+		// e.g. $Id$
+		if ($d===null)
+			$data = explode( ' ', self::id );
+		else
+			$data = explode( ' ', $d );
+		$id   = $data[2];
+		$date = $data[3];
+		return $id;
+	}
+	static function getRevisionId( $data=null )
+	{	return self::getRevisionData( $id, $date, $data );	}
 	
 } // end class
 
