@@ -115,3 +115,6 @@ REL1_10_7:
 - ForeachFunction: added 'array of arrays' iteration capability
 - Added 'PermissionFunctions' extension
 - Added 'NamespaceFunctions' extension
+- Added 'StubManager' extension
+- Fixed small bug (non core, just when Special:Version is viewed in a particular case) in RawRight
+- 
